--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ button:not(header button) {
 	padding-right: 12px;
 }
 
-.navbar-light .navbar-nav .active .nav-link,
+.navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link:hover {
 	background-color: var(--third-color);
 	color: var(--second-color);
@@ -79,7 +79,29 @@ button:not(header button) {
 	padding-top:19px;
 	padding-bottom: 19px;
 }
+.navbar.fixed-top {
+	background-color: rgba(255,255,0, 0.8);
+	padding-top:0;
+	padding-bottom: 0;
+	animation: 1s menuAnimation;
+}
 
+/*khai báo tên hiệu ứng*/
+@keyframes menuAnimation {
+	from {
+		opacity: 0;
+		transform: translateY(-100%);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+
+}
+
+.dummy-padding {
+	padding-top:95px;
+}
 
 /*HOME*/
 .home {
@@ -130,6 +152,10 @@ button:not(header button) {
 		padding-top:0;
 		padding-bottom: 0;
 	}
+
+	.dummy-padding {
+		padding-top:57px;
+	}
 }
 
 /*PORTFOLIO */
@@ -155,6 +181,10 @@ button:not(header button) {
 
 .portfolio button.active {
 	background-color: var(--fourth-color);
+}
+
+.portfolio img {
+	/*margin-bottom: 34px;*/
 }
 
 .portfolio .box {
